--- a/views/index.haml
+++ b/views/index.haml
@@ -23,6 +23,14 @@
 
         .large-3.columns
 
+      .row
+        .large-8.columns
+          %ul.inline-list
+            - ['GuitarCenter', 'Reverb', 'Craigslist'].each do |crawler|
+              %li
+                %label{for: "crawlers_#{crawler}"}= crawler
+                %input{type: 'checkbox', name: "crawlers[]", id: "crawlers_#{crawler}", value: crawler, checked: selected_crawlers.include?(crawler)}
+
     - if recent_searches.any?
       .row
         .large-8.columns
@@ -37,20 +45,19 @@
 
 .row
   .large-12.columns
-    - if results.any?
-      %hr
-      .row
-        %h5= "Found #{results.count} results:"
-      .row
-        %ul.small-block-grid-3
-          - results.each do |result|
-            %li.text-center 
-              %a{href: result.href}
-                %img{src: result.thumbnail, style: 'width: 100%; max-width: 180px; height: 100%; max-height: 180px;'}
-              %ul.pricing-table
-                %li.title= result.title
-                %li.price= "$#{result.price}"
-                %li.description= "Source: #{result.source}"
+    %hr
+    .row
+      %h5= "Found #{results.count} results:"
+    .row
+      %ul.small-block-grid-3
+        - results.each do |result|
+          %li.text-center.result
+            %a{href: result.href}
+              %img{src: result.thumbnail, style: 'width: 100%; max-width: 180px; height: 100%; max-height: 180px;'}
+            %ul.pricing-table
+              %li.title= result.title
+              %li.price= "$#{result.price}"
+              %li.description= "Source: #{result.source}"
 
 :javascript
   $('#recent-searches-toggle').on('click', function() {
