--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -46,18 +46,19 @@
 .row
   .large-12.columns
     %hr
-    .row
-      %h5= "Found #{results.count} results:"
-    .row
-      %ul.small-block-grid-3
-        - results.each do |result|
-          %li.text-center.result
-            %a{href: result.href}
-              %img{src: result.thumbnail, style: 'width: 100%; max-width: 180px; height: 100%; max-height: 180px;'}
-            %ul.pricing-table
-              %li.title= result.title
-              %li.price= "$#{result.price}"
-              %li.description= "Source: #{result.source}"
+    - if params[:q]
+      .row
+        %h5= "Found #{results.count} results:"
+      .row
+        %ul.small-block-grid-3
+          - results.each do |result|
+            %li.text-center.result
+              %a{href: result.href}
+                %img{src: result.thumbnail, style: 'width: 100%; max-width: 180px; height: 100%; max-height: 180px;'}
+              %ul.pricing-table
+                %li.title= result.title
+                %li.price= "$#{result.price}"
+                %li.description= "Source: #{result.source}"
 
 :javascript
   $('#recent-searches-toggle').on('click', function() {
